# dual_panda_demo

./: README.md
src/dual_panda_demo/: CMakeLists.txt  package.xml
src/dual_panda_demo/config/: moveit.rviz
src/dual_panda_demo/launch/: my_move_group.launch.py  my_moveit_cpp.launch.py
src/dual_panda_demo/src/: my_move_group.cpp  my_moveit_cpp.cpp
src/dual_panda_description/: CMakeLists.txt  package.xml
src/dual_panda_description/launch/: demo.launch.py  urdf.rviz
src/dual_panda_description/urdf/: dual_panda.urdf.xacro  panda.urdf.xacro
src/dual_panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_panda_moveit_config/config/: dual_panda.ros2_control.xacro  dual_panda.srdf  dual_panda.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/dual_panda_moveit_config/launch/: demo.launch.py  demo_my.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/moveit_core/constraint_samplers/src/: union_constraint_sampler.cpp
src/panda_description/: CMakeLists.txt  package.xml
src/panda_description/launch/: demo.launch.py  urdf.rviz
